syntax = "proto2";

import "dim3.proto";
import "warp.proto";
import "alloc-record.proto";

package cupr.proto;

message KernelTrace {
    repeated cupr.proto.Warp warps = 1;
    repeated cupr.proto.AllocRecord allocations = 2;
    required string kernel = 3;
    required double start = 4;
    required double end = 5;
    required string type = 6;
    required cupr.proto.Dim3 gridDim = 7;
    required cupr.proto.Dim3 blockDim = 8;
    required int32 warpSize = 9;
    required int32 bankSize = 10;
}
